[workspace]

members = [
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/hal",
    "src/warden",
    "examples",
]

[patch.crates-io]
serde_derive = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums8" }
